global loader in process

--- a/pages/signin.html
+++ b/pages/signin.html
@@ -5,13 +5,13 @@
     <div class="p-5 h-100 w-50 d-flex justify-content-center flex-column">
         <h1 class="mb-1">Sign In</h1>
         <p class="mb-5">Don't have an account ? <span ui-sref="signup">Doctor Sign Up / </span><span
-                ui-sref="register">Patient Sign Up</span></p>
+                ui-sref="signup_">Patient Sign Up</span></p>
         <div class="w-100 mb-4">
             <input type="text" placeholder="Email" required name="email" class="form-control rounded-5">
         </div>
         <div class="w-100 mb-4">
             <input type="password" placeholder="Password" required class="form-control rounded-5">
         </div>
-        <div class="btn btn-primary w-100 rounded-5">Sign In</div>
+        <button class="btn btn-primary w-100 rounded-5">Sign In</button>
     </div>
 </div>
