--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="index.css">
 
+    <link rel="stylesheet" href="node_modules/sweetalert2/dist/sweetalert2.css">
+
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 
     <link rel="stylesheet" href="node_modules/remixicon/fonts/remixicon.css">
@@ -15,6 +17,8 @@
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
 
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+
+    <script src="node_modules/sweetalert2/dist/sweetalert2.js"></script>
 
     <script src="index.js"></script>
 
