--- a/pages/register.html
+++ b/pages/register.html
@@ -1,72 +1,79 @@
-<div class="vh-100 w-100 d-flex justify-content-center align-items-center azad">
-    <div class="p-5 h-100 w-50">
-        <img src="assets/doctor-signup.png" height="690" width="700">
+<div class="vh-100 w-100 d-flex justify-content-center align-items-center azad" ng-controller="signupctrl">
+    <div class="p-5 h-100 w-50 d-none d-lg-flex">
+        <img src="assets/doctor-signup.png" height="675" width="700">
     </div>
     <div class="p-5 h-100 w-50 d-flex justify-content-center flex-column">
-        <h1>Sign Up</h1>
-        <p class="mb-5">Already have an account ? <span ui-sref="signin">Sign In</span></p>
-        <div class="d-flex w-100 mb-4 gap-4">
-            <div class="w-50">
-                <input type="text" placeholder="First Name" required name="first_name" class="form-control rounded-5">
+        <form ng-submit="submit" id="form" class="h-100 w-100 d-flex flex-column justify-content-center">
+            <h1>Sign Up</h1>
+            <p class="mb-4">Already have an account ? <span ui-sref="signin">Sign In</span></p>
+            <div class="d-flex w-100 mb-4 gap-4">
+                <div class="w-50">
+                    <input type="text" placeholder="First Name" required name="first_name"
+                        class="form-control rounded-5">
+                </div>
+                <div class="w-50">
+                    <input type="text" placeholder="Last Name" name="last_name" class="form-control rounded-5">
+                </div>
             </div>
-            <div class="w-50">
-                <input type="text" placeholder="Last Name" name="last_name" class="form-control rounded-5">
+            <div class="d-flex w-100 mb-4 gap-4">
+                <div class="w-50">
+                    <input type="text" placeholder="Email" required name="email" class="form-control rounded-5">
+                </div>
+                <div class="w-50">
+                    <input type="date" name="dob" class="w-100 form-control rounded-5">
+                </div>
             </div>
-        </div>
-        <div class="d-flex w-100 mb-4 gap-4">
-            <div class="w-50">
-                <input type="text" placeholder="Email" required name="email" class="form-control rounded-5">
+            <div class="d-flex w-100 mb-4 gap-4">
+                <div class=" w-50">
+                    <input type="text" placeholder="Phone Number" required name="phone_no"
+                        class="form-control rounded-5" maxlength="10" minlength="10">
+                </div>
+                <div class="w-50">
+                    <select name="blood_group" class="w-100 form-control rounded-5">
+                        <option value="">Blood Group</option>
+                        <option ng-repeat="blood in bloods" value="blood.key">{{blood.name}}</option>
+                    </select>
+                </div>
             </div>
-            <div class="w-50">
-                <input type="date" name="dob" class="w-100 form-control rounded-5">
+            <div class="d-flex w-100 mb-4 gap-4">
+                <div class="w-50">
+                    <select name="gender" class="w-100 form-control rounded-5">
+                        <option value="">Gender</option>
+                        <option ng-repeat="gender in genders" value="gender.key">{{gender.name}}</option>
+                    </select>
+                </div>
+                <div class="w-50">
+                    <input type="file" required name="photo" class="form-control rounded-5 bg-none">
+                </div>
             </div>
-        </div>
-        <div class="d-flex w-100 mb-4 gap-4">
-            <div class=" w-50">
-                <input type="text" placeholder="Phone Number" required name="phone_no" class="form-control rounded-5">
+            <div class="d-flex w-100 mb-4 gap-4">
+                <div class="w-50">
+                    <input type="text" placeholder="Address" required name="address" class="form-control rounded-5">
+                </div>
+                <div class="w-50">
+                    <input type="text" placeholder="Medical History" required name="medical_history"
+                        class="form-control rounded-5">
+                </div>
             </div>
-            <div class="w-50">
-                <select name="Blood_type" class="w-100 form-control rounded-5">
-                    <option value="">Blood Group</option>
-                    <option></option>
-                </select>
+            <div class="d-flex w-100 mb-4 gap-4">
+                <div class="w-50">
+                    <input type="text" placeholder="Height" required name="height" class="form-control rounded-5">
+                </div>
+                <div class="w-50">
+                    <input type="text" placeholder="Weight" required name="weight" class="form-control rounded-5">
+                </div>
             </div>
-        </div>
-        <div class="d-flex w-100 mb-4 gap-4">
-            <div class="w-50">
-                <select name="gender" class="w-100 form-control rounded-5">
-                    <option value="">Gender</option>
-                    <option></option>
-                </select>
+            <div class="d-flex w-100 mb-4 gap-4">
+                <div class="w-50">
+                    <input type="password" placeholder="Password" required class="form-control rounded-5"
+                        name="password">
+                </div>
+                <div class="w-50">
+                    <input type="password" placeholder="Confirm Password" required class="form-control rounded-5"
+                        name="confirm_password">
+                </div>
             </div>
-            <div class="w-50">
-                <input type="file" required name="photo" class="form-control rounded-5 bg-none">
-            </div>
-        </div>
-        <div class="d-flex w-100 mb-4 gap-4">
-            <div class="w-50">
-                <input type="text" placeholder="Address" required name="address" class="form-control rounded-5">
-            </div>
-            <div class="w-50">
-                <input type="text" placeholder="Medical History" required name="medical" class="form-control rounded-5">
-            </div>
-        </div>
-        <div class="d-flex w-100 mb-4 gap-4">
-            <div class="w-50">
-                <input type="text" placeholder="Height" required name="Height" class="form-control rounded-5">
-            </div>
-            <div class="w-50">
-                <input type="text" placeholder="Weight" required name="Weight" class="form-control rounded-5">
-            </div>
-        </div>
-        <div class="d-flex w-100 mb-4 gap-4">
-            <div class="w-50">
-                <input type="password" placeholder="Password" required class="form-control rounded-5">
-            </div>
-            <div class="w-50">
-                <input type="password" placeholder="Confirm Password" required class="form-control rounded-5">
-            </div>
-        </div>
-        <div class="btn btn-primary w-100 rounded-5">Sign Up</div>
+            <button class="btn btn-primary w-100 rounded-5" type="submit">Sign Up</button>
+        </form>
     </div>
 </div>
