--- a/pages/register.html
+++ b/pages/register.html
@@ -1,37 +1,40 @@
 <div class="vh-100 w-100 d-flex justify-content-center align-items-center azad" ng-controller="signupctrl">
     <div class="p-5 h-100 w-50 d-none d-lg-flex">
-        <img src="assets/doctor-signup.png" height="675" width="700">
+        <img src="assets/doctor-signup.png" height="675" width="700" alt="image">
     </div>
     <div class="p-5 h-100 w-50 d-flex justify-content-center flex-column">
-        <form ng-submit="submit" id="form" class="h-100 w-100 d-flex flex-column justify-content-center">
+        <form ng-submit="submit()" id="form" class="h-100 w-100 d-flex flex-column justify-content-center">
             <h1>Sign Up</h1>
             <p class="mb-4">Already have an account ? <span ui-sref="signin">Sign In</span></p>
             <div class="d-flex w-100 mb-4 gap-4">
                 <div class="w-50">
                     <input type="text" placeholder="First Name" required name="first_name"
-                        class="form-control rounded-5">
+                        class="form-control rounded-5" pattern="[a-zA-Z]{2,20}">
                 </div>
                 <div class="w-50">
-                    <input type="text" placeholder="Last Name" name="last_name" class="form-control rounded-5">
+                    <input type="text" placeholder="Last Name" name="last_name" class="form-control rounded-5"
+                        pattern="[a-zA-Z]{2,20}">
                 </div>
             </div>
             <div class="d-flex w-100 mb-4 gap-4">
                 <div class="w-50">
-                    <input type="text" placeholder="Email" required name="email" class="form-control rounded-5">
+                    <input type="text" placeholder="Email" required name="email" class="form-control rounded-5"
+                        pattern="[a-zA-Z0-9_\-\.]+[@][a-z]+[\.][a-z]{2,3}">
                 </div>
                 <div class="w-50">
-                    <input type="date" name="dob" class="w-100 form-control rounded-5">
+                    <input type="date" name="dob" class="w-100 form-control rounded-5" ng-change="dobcheck()"
+                        ng-model="dob">
                 </div>
             </div>
             <div class="d-flex w-100 mb-4 gap-4">
                 <div class=" w-50">
                     <input type="text" placeholder="Phone Number" required name="phone_no"
-                        class="form-control rounded-5" maxlength="10" minlength="10">
+                        class="form-control rounded-5" maxlength="10" minlength="10" pattern="[6789][0-9]{0,9}">
                 </div>
                 <div class="w-50">
                     <select name="blood_group" class="w-100 form-control rounded-5">
                         <option value="">Blood Group</option>
-                        <option ng-repeat="blood in bloods" value="blood.key">{{blood.name}}</option>
+                        <option ng-repeat="blood in bloods" value="{{blood.id}}">{{blood.name}}</option>
                     </select>
                 </div>
             </div>
@@ -39,7 +42,7 @@
                 <div class="w-50">
                     <select name="gender" class="w-100 form-control rounded-5">
                         <option value="">Gender</option>
-                        <option ng-repeat="gender in genders" value="gender.key">{{gender.name}}</option>
+                        <option ng-repeat="gender in genders" value="{{gender.id}}">{{gender.name}}</option>
                     </select>
                 </div>
                 <div class="w-50">
@@ -48,29 +51,33 @@
             </div>
             <div class="d-flex w-100 mb-4 gap-4">
                 <div class="w-50">
-                    <input type="text" placeholder="Address" required name="address" class="form-control rounded-5">
+                    <input type="text" placeholder="Address" required name="address" class="form-control rounded-5"
+                        pattern="[A-Z1-9a-z]{1,5}[A-Za-z]{1,}[A-Z1-9a-z]{1,50}">
                 </div>
                 <div class="w-50">
                     <input type="text" placeholder="Medical History" required name="medical_history"
-                        class="form-control rounded-5">
+                        class="form-control rounded-5" pattern="[a-zA-Z]{2,20}">
                 </div>
             </div>
             <div class="d-flex w-100 mb-4 gap-4">
                 <div class="w-50">
-                    <input type="text" placeholder="Height" required name="height" class="form-control rounded-5">
+                    <input type="text" placeholder="Height(Cm)" required name="height" class="form-control rounded-5"
+                        pattern="[0-9]{2,3}" maxlength="3" minlength="2">
                 </div>
                 <div class="w-50">
-                    <input type="text" placeholder="Weight" required name="weight" class="form-control rounded-5">
+                    <input type="text" placeholder="Weight(Kg)" required name="weight" class="form-control rounded-5"
+                        pattern="[0-9]{1,3}" maxlength="3" minlength="1">
                 </div>
             </div>
             <div class="d-flex w-100 mb-4 gap-4">
                 <div class="w-50">
                     <input type="password" placeholder="Password" required class="form-control rounded-5"
-                        name="password">
+                        name="password" ng-model="password" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,16}">
                 </div>
                 <div class="w-50">
                     <input type="password" placeholder="Confirm Password" required class="form-control rounded-5"
-                        name="confirm_password">
+                        name="confirm_password" ng-model="confirm_password"
+                        pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,16}">
                 </div>
             </div>
             <button class="btn btn-primary w-100 rounded-5" type="submit">Sign Up</button>
