--- a/pages/signup.html
+++ b/pages/signup.html
@@ -1,6 +1,6 @@
 <div class="p-5 vh-100 w-100 d-flex justify-content-center align-items-center azad" ng-controller="signup">
     <div class="h-100 w-50 d-none d-lg-flex">
-        <img src="assets/doctor-signup.png" height="675" width="700">
+        <img src="assets/doctor-signup.png" height="675" width="700" alt="image">
     </div>
     <div class="h-100 w-50 d-flex justify-content-center flex-column">
         <form class="vh-100 w-100 d-flex flex-column justify-content-center" ng-submit="submit()" id="form">
@@ -19,7 +19,7 @@
             <div class="d-flex w-100 mb-4 gap-4">
                 <div class="w-50">
                     <input type="text" placeholder="Email" required name="email" class="form-control rounded-5"
-                        pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}">
+                        pattern="[a-zA-Z0-9_\-\.]+[@][a-z]+[\.][a-z]{2,3}">
                 </div>
                 <div class="w-50">
                     <input type="date" name="dob" class="w-100 form-control rounded-5" ng-change="dobcheck()"
@@ -40,7 +40,7 @@
                 <div class="w-50">
                     <select name="gender" class="w-100 form-control rounded-5">
                         <option value="">Gender</option>
-                        <option ng-repeat="gender in genders" value="gender.key">{{gender.name}}</option>
+                        <option ng-repeat="gender in genders" value="{{gender.id}}">{{gender.name}}</option>
                     </select>
                 </div>
                 <div class="w-50">
@@ -50,12 +50,12 @@
             <div class="d-flex w-100 mb-4 gap-4">
                 <div class="w-50">
                     <input type="text" placeholder="Address" required name="address" class="form-control rounded-5"
-                        pattern="^(([A-Z])*(\d+)([A-Z])*)(-|\/|&)*(([A-Z])*(\d+)([A-Z])*)*((\/)*(([A-Z])*(\d+)([A-Z])*))*">
+                        pattern="[A-Z1-9a-z]{1,5}[A-Za-z]{1,}[A-Z1-9a-z]{1,50}">
                 </div>
                 <div class="w-50">
                     <select name="qualification" class="w-100 form-control rounded-5">
                         <option value="">Qualification</option>
-                        <option ng-repeat="qual in qualification" value="qual.key">{{qual.name}}</option>
+                        <option ng-repeat="qual in qualification" value="{{qual.id}}">{{qual.name}}</option>
                     </select>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                 <div class="w-50">
                     <select name="specialization" class="w-100 form-control rounded-5">
                         <option value="">Specialization</option>
-                        <option ng-repeat="spec in specialization" value="spec.key">{{spec.name}}</option>
+                        <option ng-repeat="spec in specialization" value="{{spec.id}}">{{spec.name}}</option>
                     </select>
                 </div>
                 <div class="w-50">
@@ -74,17 +74,15 @@
             <div class="d-flex w-100 mb-4 gap-4">
                 <div class="w-50">
                     <input type="password" placeholder="Password" required class="form-control rounded-5"
-                        name="password" ng-model="password">
+                        name="password" ng-model="password" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,16}">
                 </div>
                 <div class="w-50">
                     <input type="password" placeholder="Confirm Password" required class="form-control rounded-5"
-                        ng-model="confirm_password" name="confirm_password">
+                        ng-model="confirm_password" name="confirm_password"
+                        pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,16}">
                 </div>
             </div>
             <button class="btn btn-primary w-100 rounded-5" type="submit">Sign Up</button>
         </form>
     </div>
-</div>
-<div id="loaderDiv" loader>
-    <img src="assets/1486.gif" class="ajax-loader"/>
 </div>
