--- a/pages/signup.html
+++ b/pages/signup.html
@@ -32,7 +32,7 @@
                         class="form-control rounded-5" maxlength="10" minlength="10" pattern="[6789][0-9]{0,9}">
                 </div>
                 <div class="w-50">
-                    <input type="text" placeholder="Alternate Phone Number" required class="form-control rounded-5"
+                    <input type="text" placeholder="Alternate Phone Number" class="form-control rounded-5"
                         maxlength="10" minlength="10" pattern="[6789][0-9]{0,9}">
                 </div>
             </div>
