--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Hospital Management System</title>
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index/index.css">
 
     <link rel="stylesheet" href="node_modules/sweetalert2/dist/sweetalert2.css">
 
@@ -22,7 +22,7 @@
 
     <script src="node_modules/sweetalert2/dist/sweetalert2.js"></script>
 
-    <script src="index.js"></script>
+    <script src="index/index.js"></script>
 
 </head>
 
@@ -32,7 +32,7 @@
 
         <div loader>
             <div id="loaderDiv" ng-if="person">
-                <img src="assets/1486.gif" class="ajax-loader" alt="loader">
+                <img src="assets/loader.gif" class="ajax-loader" alt="loader">
             </div>
         </div>
 
