--- a/pages/medical_history.html
+++ b/pages/medical_history.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-md border-bottom">
         <div class="container-fluid d-flex justify-content-between align-items-center flex-wrap">
             <a class="navbar-brand p-0" href="#">
-                <img src="assets/logo.png" height="100" width="100" alt="App Logo">
+                <img src="assets/logo.png" height="50" width="50" alt="App Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavContent"
                 aria-controls="navbarNavContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,44 +17,40 @@
                         <a class="nav-link text-muted fw-semibold" ui-sref="profile">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-muted fw-semibold" ng-click="logout()">Log Out</a>
+                        <a class="nav-link text-danger fw-semibold" ng-click="logout()">Sign Out</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container text-center pt-5">
-        <div class="d-flex flex-wrap justify-content-center" ng-repeat="appointment in appointments">
-            <div class="my-3 p-2 box w-25">
-                <div class="card p-0 d-flex flex-column shadow-sm">
-                    <div class="d-flex p-3">
-                        <div class="d-flex flex-column text-start">
-                            <div class="text-uppercase fs-5 fw-medium mb-1">
-                                Dr. {{appointment.name}}
-                            </div>
-                            <div class="text-muted fw-bold mb-1">{{appointment.specialization}}</div>
-                            <div class="text-muted mb-1">
-                                <span class="fw-medium text-dark">Date : </span> {{appointment.appointment_date}}
-                            </div>
-                            <div class="text-muted mb-1">
-                                <span class="fw-medium text-dark">Time : </span> {{appointment.appointment_time}}
-                            </div>
-                            <div class="text-muted mb-1">
-                                <span class="fw-medium text-dark">Reason : </span> {{appointment.reason_to_vist}}
-                            </div>
-                            <div class="text-muted mb-1">
-                                <span class="fw-medium text-dark">Status : </span>{{appointment.status}}
-                            </div>
-                            <div class="mb-0 text-muted">
-                                <span class="fw-medium text-dark">Fee : </span> ₹{{appointment.fees}}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div ng-if="appointments.length === 0">
-                    No appointments to display.
-                </div>
-            </div>
-        </div>
+    <h3 class="mb-3 p-2">Appointments</h3>
+    <div class="table-responsive">
+        <table class="table table-bordered table-striped">
+            <thead>
+                <tr class="table-primary">
+                    <th scope="col">Doctor Name</th>
+                    <th scope="col">Specialization</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Time</th>
+                    <th scope="col">Reason</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Fee</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="appointment in appointments">
+                    <td>Dr. {{appointment.name}}</td>
+                    <td>{{appointment.specialization}}</td>
+                    <td>{{appointment.appointment_date}}</td>
+                    <td>{{appointment.appointment_time}}</td>
+                    <td>{{appointment.reason_to_vist}}</td>
+                    <td>{{appointment.status}}</td>
+                    <td>$ 200{{appointment.fees}}</td>
+                </tr>
+                <tr ng-if="appointments.length === 0">
+                    <td  class="text-center text-muted">No appointments to display.</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
