--- a/pages/profile.html
+++ b/pages/profile.html
@@ -1,8 +1,8 @@
-<div class="container-fluid">
+<div class="container-fluid" ng-controller="profile">
     <nav class="navbar navbar-expand-md border-bottom">
         <div class="container-fluid d-flex justify-content-between align-items-center flex-wrap">
             <a class="navbar-brand p-0" href="#">
-                <img src="assets/logo.png" height="100" width="100" alt="App Logo">
+                <img src="assets/logo.png" height="50" width="50" alt="App Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavContent"
                 aria-controls="navbarNavContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,57 +17,71 @@
                         <a class="nav-link text-muted fw-semibold" ui-sref="medical">Appointments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-muted fw-semibold" ng-click="logout()">Log Out</a>
+                        <a class="nav-link text-danger fw-semibold" ng-click="logout()">Sign Out</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <h3 class="mb-3 p-2">Profile</h3>
-    <div>
-        <table class="table table-bordered table-striped">
-            <tbody>
-                <tr>
-                    <th scope="row">Name</th>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Email</th>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Date of Birth</th>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Phone Number</th>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Blood Group</th>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Gender</th>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Address</th>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Medical History</th>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Height</th>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Weight</th>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="container">
+        <div >
+            <h3 class="mb-3 p-2">Profile: {{fname}}</h3>
+            <table class="table table-bordered table-striped">
+                <tbody>
+                    <tr>
+                        <th scope="row">Name</th>
+                        <td>{{fname}} {{lname}}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Email</th>
+                        <td>{{email}}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Date of Birth</th>
+                        <td>{{dob}}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Phone Number</th>
+                        <td>{{phone}}</td>
+                    </tr>
+                    <tr ng-if="blood">
+                        <th scope="row">Blood Group</th>
+                        <td>{{blood}}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Gender</th>
+                        <td>{{gender}}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Address</th>
+                        <td>{{address}}</td>
+                    </tr>
+                    <tr ng-if="history">
+                        <th scope="row">Medical History</th>
+                        <td>{{history}}</td>
+                    </tr>
+                    <tr ng-if="height">
+                        <th scope="row">Height</th>
+                        <td>{{height}}</td>
+                    </tr>
+                    <tr ng-if="weight">
+                        <th scope="row">Weight</th>
+                        <td>{{weight}}</td>
+                    </tr>
+                    <tr ng-if="qua">
+                        <th scope="row">Qualification</th>
+                        <td>{{qua}}</td>
+                    </tr>
+                    <tr ng-if="spec">
+                        <th scope="row">Specialization</th>
+                        <td>{{spec}}</td>
+                    </tr>
+                    <tr ng-if="exp">
+                        <th scope="row">Experience</th>
+                        <td>{{exp}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
