--- a/pages/reception_appointment.html
+++ b/pages/reception_appointment.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-md border-bottom">
         <div class="container-fluid d-flex justify-content-between align-items-center flex-wrap">
             <a class="navbar-brand p-0" href="#">
-                <img src="assets/logo.png" height="100" width="100" alt="App Logo">
+                <img src="assets/logo.png" height="50" width="50" alt="App Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavContent"
                 aria-controls="navbarNavContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,43 +14,84 @@
                         <a class="nav-link text-muted fw-semibold" ui-sref="profile">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-muted fw-semibold" ng-click="logout()">Log Out</a>
+                        <a class="nav-link text-danger fw-semibold" ng-click="logout()">Sign Out</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="mb-4 mt-3">
-        <h1 class="fs-4 fw-bold">Appointment Review</h1>
+    <div class="mb-4 mt-3" ng-if="appointments.length > 0">
+        <h1 class="fs-4 fw-bold">Appointments</h1>
     </div>
-    <div ng-if="appointments.length === 0" class="text-center p-4 shadow-lg rounded-3 bg-light mb-5">
-        <p class="fw-semibold fs-5 text-muted">No appointments awaiting review!</p>
-    </div>
-    <div class="d-flex flex-wrap justify-content-start gap-4">
-        <div ng-repeat="appointment in appointments" class="card shadow-sm rounded-3 border-top h-100" id="cards">
-            <div class="p-3">
-                <div class="d-flex justify-content-between align-items-start">
-                    <div>
-                        <h2 class="h5 fw-bold text-dark">Dr. {{appointment.doc_fname}} {{appointment.doc_lname}}</h2>
-                        <p class="small fw-semibold text-primary mt-1">{{appointment.specialization}}</p>
-                    </div>
-                </div>
-                <div class="small text-muted border-top pt-2">
-                    <p class="mb-1 fs-6"><span class="fw-medium  text-dark">Patient : </span> {{appointment.fname}}
-                        {{appointment.lname}}</p>
-                    <p class="mb-1 fs-6"><span class="fw-medium text-dark">Date : </span> {{appointment.date}}</p>
-                    <p class="mb-1 fs-6"><span class="fw-medium text-dark">Time : </span> {{appointment.time}}</p>
-                    <p class="mb-1 fs-6"><span class="fw-medium text-dark">Reason : </span> {{appointment.reason}}</p>
-                    <p class="mb-1 fs-6"><span class="fw-medium text-dark">History : </span> {{appointment.history}}</p>
-                    <p ng-if="appointment.status != 'Pending'" class=" fs-6"><span class="fw-medium text-dark">Status :
-                        </span> {{appointment.status}}</p>
-                </div>
-                <div ng-if="appointment.status === 'Pending'" class="d-flex gap-3 border-top pt-3">
-                    <button ng-click="approve(appointment.id)" class="btn btn-success fw-semibold shadow-sm btn-sm"
-                        type="button">Approve</button>
-                    <button type="button" class="btn btn-danger fw-semibold shadow-sm btn-sm">Decline</button>
-                </div>
-            </div>
+    <div class="table-responsive">
+        <table class="table table-bordered table-striped align-middle">
+            <thead ng-if="appointments.length > 0">
+                <tr class="table-primary">
+                    <th scope="col">Doctor Name</th>
+                    <th scope="col">Specialization</th>
+                    <th scope="col">Patient Name</th>
+                    <th scope="col">Date and Time</th>
+                    <th scope="col">Reason</th>
+                    <th scope="col">History</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="appointment in appointments">
+                    <td>
+                        Dr. {{appointment.doctor_first_name}} {{appointment.doctor_last_name}}
+                    </td>
+                    <td>{{appointment.doctor_specialization_name}}</td>
+                    <td>{{appointment.patient_first_name}} {{appointment.patient_last_name}}</td>
+                    <td>{{appointment.appointment_date}} at {{appointment.appointment_time}}</td>
+                    <td>{{appointment.reason_to_vist}}</td>
+                    <td>{{appointment.patient_history}}</td>
+                    <td>
+                        <span ng-if="appointment.status === 'Rejected by receptionist'"
+                            class="badge bg-danger text-white">{{appointment.status}}</span>
+                        <span ng-if="appointment.status === 'Pending'"
+                            class="badge bg-warning text-white">{{appointment.status}}</span>
+                        <span ng-if="appointment.status === 'Accepted by receptionist' && user != 'Doctor'"
+                            class="badge bg-success text-white">{{appointment.status}}</span>
+                        <span ng-if="appointment.status === 'Accepted by receptionist' && user == 'Doctor' "
+                            class="badge bg-primary text-white">{{appointment.status}}</span>
+                        <span ng-if="appointment.status === 'Accepted by doctor' && user == 'Doctor' "
+                            class="badge bg-success text-white">{{appointment.status}}</span>
+                    </td>
+                    <td>
+                        <div ng-if="appointment.status === 'Pending' || (user == 'Doctor' && appointment.status === 'Accepted by receptionist')" class="d-flex gap-2">
+                            <button ng-click="approve(appointment.id)" class="btn btn-success fw-semibold btn-sm"
+                                type="button">Approve</button>
+                            <button type="button" class="btn btn-danger fw-semibold btn-sm" data-bs-toggle="modal"
+                                data-bs-target="#rejectModal">Reject</button>
+                            <div class="modal fade" id="rejectModal" tabindex="-1" aria-labelledby="reject"
+                                data-bs-backdrop="static" data-bs-keyboard="false">
+                                <div class="modal-dialog modal-md">
+                                    <div class="modal-content">
+                                        <div class="modal-header text-dark">
+                                            <h5 class="modal-title" id="reject">Appointment rejection reason</h5>
+                                        </div>
+                                        <div class="modal-body">
+                                            <textarea type="text" placeholder="Explain reason" required
+                                                class="form-control" id="reason" pattern="[A-Za-z_ ]{1,50}"></textarea>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                                                ng-click="clear()">Close</button>
+                                            <button type="submit" class="btn btn-primary"
+                                                ng-click="reject(appointment.id)">Submit</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <div ng-if="appointments.length === 0">
+            <p class="text-center text-danger fs-3 py-3">No appointments to display.</p>
         </div>
     </div>
 </div>
