--- a/pages/signup_doctor.html
+++ b/pages/signup_doctor.html
@@ -1,6 +1,6 @@
 <div class="p-5 vh-100 w-100 d-flex justify-content-center align-items-center azad" ng-controller="signup">
-    <div class="h-100 d-none d-lg-flex align-items-center justify-content-center">
-        <img src="assets/3.jpg" height="690" width="800" alt="image">
+    <div class="h-100 d-none d-md-flex align-items-center justify-content-center">
+        <img src="assets/3.jpg" height="690" width="800" alt="image" class="img-fluid">
     </div>
     <div class="p-5 h-100 d-flex justify-content-center flex-column">
         <form class="vh-100 w-100 d-flex flex-column justify-content-center" ng-submit="submit()" id="form">
